修改打包脚本

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: apserver-frontend
-          path: controller/dist
+          path: frontend/dist
   release:
     needs: [frontend-builder]
     name: release
