修改插件定义、上游服务定义

--- a/app/dynamic-module/redis/plugin.yml
+++ b/app/dynamic-module/redis/plugin.yml
@@ -3,7 +3,7 @@ name: "redis"
 cname: "Redis配置"
 resume: "配置Redis Cluster信息，帮助Apinto节点接入Redis资源。"
 version: "v1.0.0"
-icon: "监控告警.png"
+icon: "Redis配置.png"
 driver: "dynamic.apinto.com"
 front: template
 navigation: "navigation.system"
