--- a/app/dynamic-module/influxdb/plugin.yml
+++ b/app/dynamic-module/influxdb/plugin.yml
@@ -3,7 +3,7 @@ name: "influxdb"
 cname: "InfluxDB配置"
 resume: "配置InfluxDB v2服务端信息，InfluxDB是监控告警的数据源之一。"
 version: "v1.0.0"
-icon: "监控告警.png"
+icon: "InfluxDB配置.png"
 driver: "dynamic.apinto.com"
 front: template
 navigation: "navigation.system"
