--- a/initialize/plugins/upstream.apinto.com/plugin.yml
+++ b/initialize/plugins/upstream.apinto.com/plugin.yml
@@ -2,7 +2,7 @@ id: "upstream.apinto.com"
 name: "upstream"
 cname: "上游服务"
 resume: "配置上游服务信息，通过API绑定，实现完整转发流程。支持IP Hash、带权轮询等负载均衡算法，合理分配上游服务压力，保证上游服务稳定性。"
-version: "v1.0.5"
+version: "v1.0.6"
 icon: "上游服务.png"
 driver: "upstream.apinto.com"
 type: 1 #0为框架模块 1为核心模块 2为内置模块 3为非内置
@@ -351,7 +351,7 @@ define:  # 动态模块定义
                       "labelCol": 6,
                       "wrapperCol": 10
                   },
-                  "default": "pass",
+                  "default": "node",
                   "required": true,
                   "enum": [
                       {
